[workspace]

members = [
    "ferveo",
    "ferveo-common",
    "ferveo-python",
    "ferveo-tdec",
    "ferveo-wasm",
    "subproductdomain",
]

[workspace.dependencies]
anyhow = "1.0.47"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
bincode = "1.3.3"
cargo-smart-release = "0.20.0"
chacha20poly1305 = "0.10.1"
criterion = "0.3"
console_error_panic_hook = "0.1.7"
derive_more = { version = "0.99", default-features = false }
digest = "0.10.0"
ferveo-common = { path = "ferveo-common" }
ferveo-tdec = { path = "ferveo-tdec" }
generic-array = "0.14.7"
getrandom = "0.2"
hex = "0.4"
itertools = "0.10.5"
js-sys = "0.3.63"
measure_time = "0.8"
miracl_core = "=2.3.0"
pprof = "0.6"
pyo3 = "0.18.2"
pyo3-build-config = "*"
rand = "0.8"
rand_core = "0.6.4"
rand_old =  { package = "rand", version = "0.7" } # TODO: Used by benchmarks/pairing.rs, update to rand = "0.8" when possible
serde = "1.0"
serde_bytes = "0.11.9"
serde_with = "2.2.0"
sha2 = "0.10.6"
subproductdomain = { path = "subproductdomain" }
test-case = "3.3.1"
thiserror = "1.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-derive = "0.2.1"
wasm-bindgen-test = "0.3.28"
zeroize = "1.6.0"

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Optimizations are needed such that the tests run in a reasonable timeframe
[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = true

[http]
http.check-revoke = false
