[package]
name = "ferveo-common-nucypher-temp4"
version = "0.4.0-alpha"
edition = "2021"
license = "GPL-3.0"
authors = ["David Nuñez <david@nucypher.com>", "Piotr Roslaniec <p.roslaniec@gmail.com>", "Heliax AG <hello@heliax.dev>"]
description = "Common types and traits for Ferveo"

[dependencies]
ark-ec = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
ark-std = { workspace = true }
bincode = { workspace = true }
generic-array = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
