[package]
name = "ferveo-python"
authors = ["David Nuñez <david@nucypher.com>", "Piotr Roslaniec <p.roslaniec@gmail.com>"]
version = "0.4.0-alpha"
edition = "2021"
repository = "https://github.com/nucypher/ferveo"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
ferveo = { package = "ferveo-nucypher-temp5", path = "../ferveo", features = ["bindings-python"] }
pyo3 = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }
