[package]
name = "ferveo-tdec-temp4"
version = "0.4.0-alpha"
edition = "2021"
authors = ["David Nuñez <david@nucypher.com>", "Piotr Roslaniec <p.roslaniec@gmail.com>", "Heliax AG <hello@heliax.dev>"]
license = "GPL-3.0"
description = "Threshold signature and encryption using group secret key"
repository = "https://github.com/nucypher/ferveo/"
readme = "README.md"

[lib]
bench = false

[features]
test-common = []
api = []

[dependencies]
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
ferveo-common = { package = "ferveo-common-nucypher-temp4", path = "../ferveo-common", version = "^0.4.0-alpha" }
itertools = { workspace = true }
miracl_core = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
subproductdomain = { package = "subproductdomain-nucypher-temp4", path = "../subproductdomain", version = "^0.4.0-alpha" }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
hex = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[[bench]]
name = "tpke"
path = "benches/tpke.rs"
harness = false
required-features = ["test-common"]

[[bench]]
name = "arkworks"
path = "benches/arkworks.rs"
harness = false
