[package]
name = "ferveo-wasm"
version = "0.4.0"
authors = ["David Nuñez <david@nucypher.com>", "Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["cryptography", "no-std"]
repository = "https://github.com/nucypher/ferveo"
description = "WASM bindings for ferveo crate"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferveo = { package = "ferveo-nucypher", path = "../ferveo", features = ["bindings-wasm"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
itertools = { workspace = true }

