[package]
name = "subproductdomain-pre-release"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["David Nuñez <david@nucypher.com>", "Heliax AG <hello@heliax.dev>", "Piotr Roslaniec <p.roslaniec@gmail.com>"]
description = "Implements subproduct domain algorithm"

[dependencies]
anyhow = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
